--- a/style.css
+++ b/style.css
@@ -27,17 +27,16 @@ a {
 }
 
 .card-img img {
-    border-radius: 30px;
     height: 100%;
     width: 100%;
 }
 
 .blur{
-    filter:blur(15px);
+    filter:blur(18px);
 }
 
 .blur:hover{
-    filter:none;
+    filter:brightness(0%);
 }
 
 
